Fix Cleaner moved in JDK11.